<resources>
    <string name="app_name">New Home New West</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="name">Name</string>
    <string name="category">Category: </string>
    <string name="description">Description: </string>
    <string name="hours">Hours: </string>
    <string name="location">Location: </string>
    <string name="postalCode">Postal Code: </string>
    <string name="phone">Phone: </string>
    <string name="email">Email: </string>
    <string name="website">Website: </string>
    <string name="summary">Summary: </string>
    <string name="title_activity_maps">Show on Map</string>
    <string name="title_activity_sports_detail">SportsDetailActivity</string>
    <string name="activities">Activities: </string>
    <string name="status">Status: </string>
    <string name="onStreet">OnStreet: </string>
    <string name="atStreet">AtStreet: </string>
    <string name="position">Position: </string>
    <string name="direction">Direction: </string>
</resources>
