<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vnstarzynski.movingtonewwest.BusStopDetailActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/busStopNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="25sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"/>

            <TextView
                android:id="@+id/onStreetHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/busStopNumber"
                android:layout_marginTop="13dp"
                android:text="@string/onStreet"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/onStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/onStreetHeader"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/onStreetHeader"
                android:text="" />

            <TextView
                android:id="@+id/atStreetHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/onStreet"
                android:layout_marginTop="5dp"
                android:text="@string/atStreet"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/atStreet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_alignTop="@+id/atStreetHeader"
                android:layout_toEndOf="@+id/atStreetHeader"
                android:text="" />

            <TextView
                android:id="@+id/directionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/atStreet"
                android:layout_marginTop="5dp"
                android:text="@string/direction"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/direction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_alignTop="@+id/directionHeader"
                android:layout_toEndOf="@+id/directionHeader"
                android:text="" />

            <TextView
                android:id="@+id/positionHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/direction"
                android:layout_marginTop="5dp"
                android:text="@string/position"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/positionHeader"
                android:layout_toEndOf="@+id/positionHeader"
                android:layout_marginStart="10dp"
                android:text="" />

            <TextView
                android:id="@+id/statusHeader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/position"
                android:layout_marginTop="5dp"
                android:text="@string/status"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/statusHeader"
                android:layout_toEndOf="@+id/statusHeader"
                android:layout_marginStart="10dp"
                android:text="" />

            <Button
                android:id="@+id/map_stop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/favourite"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/title_activity_maps"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:srcCompat="@android:drawable/btn_star"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginBottom="35dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp" />

</RelativeLayout>
