<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.vnstarzynski.movingtonewwest.EventDetailActivity"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/eventName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:gravity="center"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/descriptionHeader_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/eventName"
                android:layout_marginTop="13dp"
                android:text="@string/description"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/description_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/descriptionHeader_event"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/descriptionHeader_event"
                android:text="" />

            <TextView
                android:id="@+id/addressHeader_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/description_event"
                android:layout_marginTop="5dp"
                android:text="@string/location"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/address_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/addressHeader_event"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/addressHeader_event"
                android:text="" />

            <TextView
                android:id="@+id/postalCodeHeader_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/address_event"
                android:layout_marginTop="5dp"
                android:text="@string/postalCode"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/postalCode_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/postalCodeHeader_event"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/postalCodeHeader_event"
                android:text="" />

            <TextView
                android:id="@+id/phoneHeader_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/postalCode_event"
                android:layout_marginTop="5dp"
                android:text="@string/phone"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/phone_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/phoneHeader_event"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/phoneHeader_event"
                android:text="" />

            <TextView
                android:id="@+id/emailHeader_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/phone_event"
                android:layout_marginTop="5dp"
                android:text="@string/email"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/emailHeader_event"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/emailHeader_event"
                android:autoLink="email"
                android:text="" />

            <TextView
                android:id="@+id/websiteHeader_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/email_event"
                android:layout_marginTop="5dp"
                android:text="@string/phone"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/website_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/websiteHeader_event"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/websiteHeader_event"
                android:autoLink="web"
                android:text="" />

            <TextView
                android:id="@+id/summaryHeader_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/website_event"
                android:layout_marginTop="5dp"
                android:text="@string/summary"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/summary_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/summaryHeader_event"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@+id/summaryHeader_event"
                android:text="" />

            <Button
                android:id="@+id/map_event"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/favourite_event"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="50dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/title_activity_maps"
                android:textColor="@android:color/background_light"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favourite_event"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_marginBottom="35dp"
        android:layout_marginEnd="35dp"
        android:layout_marginLeft="@dimen/fab_margin"
        android:layout_marginRight="@dimen/fab_margin"
        app:srcCompat="@android:drawable/btn_star" />

</RelativeLayout>
